--- a/01.HTML/01.Restaurant/_includes/book-table.jade
+++ b/01.HTML/01.Restaurant/_includes/book-table.jade
@@ -2,32 +2,32 @@ form
     .row.form-group
         .col-sm-6.col-xs-6
             .input-group
-                input.form-control(type='text', placeholder='Name')
+                input.form-control(type='text', placeholder='Name', onfocus="this.placeholder = ''")
                 .input-group-addon
                     i.fa.fa-user
         .col-sm-6.col-xs-6
             .input-group
-                input.form-control(type='text', placeholder='Phone')
+                input.form-control(type='text', placeholder='Phone', onfocus="this.placeholder = ''")
                 .input-group-addon
                     i.fa.fa-phone
         .col-sm-6.col-xs-6
             .input-group
-                input.form-control(type='text', placeholder='Email')
+                input.form-control(type='text', placeholder='Email', onfocus="this.placeholder = ''")
                 .input-group-addon
                     i.fa.fa-envelope
         .col-sm-6.col-xs-6
             .input-group
-                input.form-control(type='text', placeholder='Number of people')
+                input.form-control(type='text', placeholder='Number of people', onfocus="this.placeholder = ''")
                 .input-group-addon
                     i.fa.fa-users
         .col-sm-6.col-xs-6
             .input-group
-                input.form-control(type='text', placeholder='Date')
+                input.form-control(type='text', placeholder='Date', onfocus="this.placeholder = ''")
                 .input-group-addon
                     i.fa.fa-calendar
         .col-sm-6.col-xs-6
             .input-group
-                input.form-control(type='text', placeholder='Time')
+                input.form-control(type='text', placeholder='Time', onfocus="this.placeholder = ''")
                 .input-group-addon
                     i.fa.fa-clock-o 
     button.btn(type='submit') Resever Now
