--- a/01.HTML/01.Restaurant/_includes/header/menu-mobile.jade
+++ b/01.HTML/01.Restaurant/_includes/header/menu-mobile.jade
@@ -70,26 +70,35 @@ ul.nav.navbar-nav.mb-nav
             a.sub-menu(href="blog.html")
                span.text blog
          li
+            a.sub-menu(href="blog-no-sidebar.html")
+               span.text blog no sidebar
+         li
             a.sub-menu(href="blog-detail.html")
                span.text blog detail
-         li.dropdown-2
-            a.sub-menu(href="blog-detail.html")
-               span.text more page
-            span.icons-dropdown
-               i.fa.fa-angle-right
-            ul.mb-menu-dropdown-2
-               li
-                  a.sub-menu(href="blog.html")
-                     span.text blog sidebar left
-               li
-                  a.sub-menu(href="blog-detail.html")
-                     span.text blog two column
+         //- li.dropdown-2
+         //-    a.sub-menu(href="blog-detail.html")
+         //-       span.text more page
+         //-    span.icons-dropdown
+         //-       i.fa.fa-angle-right
+         //-    ul.mb-menu-dropdown-2
+         //-       li
+         //-          a.sub-menu(href="blog.html")
+         //-             span.text blog sidebar left
+         //-       li
+         //-          a.sub-menu(href="blog-detail.html")
+         //-             span.text blog two column
    li.dropdown
       a.main-menu(href="javascript:void(0)")
          span.text pages
       span.icons-dropdown
          i.fa.fa-angle-right
       ul.mb-menu-dropdown
+         li
+            a.sub-menu(href="event.html")
+               span.text event
+         li
+            a.sub-menu(href="gallery-isotope.html")
+               span.text gallery
          li
             a.sub-menu(href="404.html")
                span.text page 404      
