--- a/01.HTML/01.Restaurant/_includes/list-menu/list-menu-4-b.jade
+++ b/01.HTML/01.Restaurant/_includes/list-menu/list-menu-4-b.jade
@@ -1,5 +1,5 @@
 .row
-    .col-md-4.col-sm-4
+    .col-md-4.col-sm-4.col-xs-6
         .menu-items.style-4
             a.item-image(href="#")
                 img.img-responsive(src="assets/images/menu/big-menu-17.jpg", alt="")
@@ -9,7 +9,7 @@
                     span 47.00
                 a.title(href="#") West Coast Rock Oysters
                 .desciption Lorem ipsum dolor sit a met, consec tetur adipisi cing elitse dorem do eiusmod isae adipisi. 
-    .col-md-4.col-sm-4
+    .col-md-4.col-sm-4.col-xs-6
         .menu-items.style-4
             a.item-image(href="#")
                 img.img-responsive(src="assets/images/menu/big-menu-6.jpg", alt="")
@@ -19,7 +19,7 @@
                     span 53.00
                 a.title(href="#") West Coast Rock Oysters
                 .desciption Lorem ipsum dolor sit a met, consec tetur adipisi cing elitse dorem do eiusmod isae adipisi. 
-    .col-md-4.col-sm-4
+    .col-md-4.col-sm-4.col-xs-6
         .menu-items.style-4
             a.item-image(href="#")
                 img.img-responsive(src="assets/images/menu/big-menu-1.jpg", alt="")
@@ -29,7 +29,7 @@
                     span 48.00
                 a.title(href="#") West Coast Rock Oysters
                 .desciption Lorem ipsum dolor sit a met, consec tetur adipisi cing elitse dorem do eiusmod isae adipisi. 
-    .col-md-4.col-sm-4
+    .col-md-4.col-sm-4.col-xs-6
         .menu-items.style-4
             a.item-image(href="#")
                 img.img-responsive(src="assets/images/menu/big-menu-19.jpg", alt="")
@@ -39,7 +39,7 @@
                     span 61.00
                 a.title(href="#") West Coast Rock Oysters
                 .desciption Lorem ipsum dolor sit a met, consec tetur adipisi cing elitse dorem do eiusmod isae adipisi. 
-    .col-md-4.col-sm-4
+    .col-md-4.col-sm-4.col-xs-6
         .menu-items.style-4
             a.item-image(href="#")
                 img.img-responsive(src="assets/images/menu/big-menu-15.jpg", alt="")
@@ -49,7 +49,7 @@
                     span 39.00
                 a.title(href="#") West Coast Rock Oysters
                 .desciption Lorem ipsum dolor sit a met, consec tetur adipisi cing elitse dorem do eiusmod isae adipisi. 
-    .col-md-4.col-sm-4
+    .col-md-4.col-sm-4.col-xs-6
         .menu-items.style-4
             a.item-image(href="#")
                 img.img-responsive(src="assets/images/menu/big-menu-12.jpg", alt="")
