--- a/01.HTML/01.Restaurant/assets/css/layout.less
+++ b/01.HTML/01.Restaurant/assets/css/layout.less
@@ -116,6 +116,10 @@ a {
     z-index: 10;
 }
 
+.main-right {
+    float: right;
+}
+
 
 /*----------  1.2. CSS for page  ----------*/
 
@@ -1070,9 +1074,9 @@ a {
 
 
 
- /*==============================
- =======     SIDEBAR      =======
- ===============================*/
+/*==============================
+=======     SIDEBAR      =======
+===============================*/
 
 .sidebar {
     .col-2:last-child {
@@ -1340,6 +1344,6 @@ a {
     }
 }
 
- /*=================================
- =====       END WIDGET       ======
- =================================*/
+/*=================================
+=====       END WIDGET       ======
+=================================*/
