--- a/01.HTML/01.Restaurant/_includes/list-menu/list-menu-4-c.jade
+++ b/01.HTML/01.Restaurant/_includes/list-menu/list-menu-4-c.jade
@@ -1,5 +1,5 @@
 .row
-    .col-md-4.col-sm-4
+    .col-md-4.col-sm-4.col-xs-6
         .menu-items.style-4
             a.item-image(href="#")
                 img.img-responsive(src="assets/images/menu/big-menu-14.jpg", alt="")
@@ -9,7 +9,7 @@
                     span 36.00
                 a.title(href="#") West Coast Rock Oysters
                 .desciption Lorem ipsum dolor sit a met, consec tetur adipisi cing elitse dorem do eiusmod isae adipisi. 
-    .col-md-4.col-sm-4
+    .col-md-4.col-sm-4.col-xs-6
         .menu-items.style-4
             a.item-image(href="#")
                 img.img-responsive(src="assets/images/menu/big-menu-13.jpg", alt="")
@@ -19,7 +19,7 @@
                     span 42.00
                 a.title(href="#") West Coast Rock Oysters
                 .desciption Lorem ipsum dolor sit a met, consec tetur adipisi cing elitse dorem do eiusmod isae adipisi. 
-    .col-md-4.col-sm-4
+    .col-md-4.col-sm-4.col-xs-6
         .menu-items.style-4
             a.item-image(href="#")
                 img.img-responsive(src="assets/images/menu/big-menu-4.jpg", alt="")
@@ -29,7 +29,7 @@
                     span 38.00
                 a.title(href="#") West Coast Rock Oysters
                 .desciption Lorem ipsum dolor sit a met, consec tetur adipisi cing elitse dorem do eiusmod isae adipisi. 
-    .col-md-4.col-sm-4
+    .col-md-4.col-sm-4.col-xs-6
         .menu-items.style-4
             a.item-image(href="#")
                 img.img-responsive(src="assets/images/menu/big-menu-18.jpg", alt="")
@@ -39,7 +39,7 @@
                     span 47.00
                 a.title(href="#") West Coast Rock Oysters
                 .desciption Lorem ipsum dolor sit a met, consec tetur adipisi cing elitse dorem do eiusmod isae adipisi. 
-    .col-md-4.col-sm-4
+    .col-md-4.col-sm-4.col-xs-6
         .menu-items.style-4
             a.item-image(href="#")
                 img.img-responsive(src="assets/images/menu/big-menu-20.jpg", alt="")
@@ -49,7 +49,7 @@
                     span 42.00
                 a.title(href="#") West Coast Rock Oysters
                 .desciption Lorem ipsum dolor sit a met, consec tetur adipisi cing elitse dorem do eiusmod isae adipisi. 
-    .col-md-4.col-sm-4
+    .col-md-4.col-sm-4.col-xs-6
         .menu-items.style-4
             a.item-image(href="#")
                 img.img-responsive(src="assets/images/menu/big-menu-12.jpg", alt="")
