--- a/01.HTML/01.Restaurant/_includes/list-menu/list-menu-4.jade
+++ b/01.HTML/01.Restaurant/_includes/list-menu/list-menu-4.jade
@@ -1,5 +1,5 @@
 .row
-    .col-md-4.col-sm-4
+    .col-md-4.col-sm-4.col-xs-6
         .menu-items.style-4
             a.item-image(href="#")
                 img.img-responsive(src="assets/images/menu/big-menu-2.jpg", alt="")
@@ -9,7 +9,7 @@
                     span 54.00
                 a.title(href="#") West Coast Rock Oysters
                 .desciption Lorem ipsum dolor sit a met, consec tetur adipisi cing elitse dorem do eiusmod isae adipisi. 
-    .col-md-4.col-sm-4
+    .col-md-4.col-sm-4.col-xs-6
         .menu-items.style-4
             a.item-image(href="#")
                 img.img-responsive(src="assets/images/menu/big-menu-5.jpg", alt="")
@@ -19,7 +19,7 @@
                     span 43.00
                 a.title(href="#") West Coast Rock Oysters
                 .desciption Lorem ipsum dolor sit a met, consec tetur adipisi cing elitse dorem do eiusmod isae adipisi. 
-    .col-md-4.col-sm-4
+    .col-md-4.col-sm-4.col-xs-6
         .menu-items.style-4
             a.item-image(href="#")
                 img.img-responsive(src="assets/images/menu/big-menu-7.jpg", alt="")
@@ -29,7 +29,7 @@
                     span 62.00
                 a.title(href="#") West Coast Rock Oysters
                 .desciption Lorem ipsum dolor sit a met, consec tetur adipisi cing elitse dorem do eiusmod isae adipisi. 
-    .col-md-4.col-sm-4
+    .col-md-4.col-sm-4.col-xs-6
         .menu-items.style-4
             a.item-image(href="#")
                 img.img-responsive(src="assets/images/menu/big-menu-9.jpg", alt="")
@@ -39,7 +39,7 @@
                     span 24.00
                 a.title(href="#") West Coast Rock Oysters
                 .desciption Lorem ipsum dolor sit a met, consec tetur adipisi cing elitse dorem do eiusmod isae adipisi. 
-    .col-md-4.col-sm-4
+    .col-md-4.col-sm-4.col-xs-6
         .menu-items.style-4
             a.item-image(href="#")
                 img.img-responsive(src="assets/images/menu/big-menu-10.jpg", alt="")
@@ -49,7 +49,7 @@
                     span 36.00
                 a.title(href="#") West Coast Rock Oysters
                 .desciption Lorem ipsum dolor sit a met, consec tetur adipisi cing elitse dorem do eiusmod isae adipisi. 
-    .col-md-4.col-sm-4
+    .col-md-4.col-sm-4.col-xs-6
         .menu-items.style-4
             a.item-image(href="#")
                 img.img-responsive(src="assets/images/menu/big-menu-11.jpg", alt="")
